tests/invalid/event_requires_void_return.wio
@Export
@Event("game.tick")
fn OnGameTick() -> i32 {
    return 1;
}
